Fix modal dismiss icon alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -278,6 +278,9 @@ body {
 }
 
 .DeveloperOptionsView_modalDismissButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-left: 16px;
   padding-right: 16px;
 
